tests/fail/state-leak.el
(import core)
(using core)

(run (ref 1))
